--- a/toyo/search-result.html
+++ b/toyo/search-result.html
@@ -55,12 +55,112 @@
                 <div class="page-body">
                     <div class="container">
                         <div class="row">
-                            <div class="result-slide">
-                                <div>
-                                    <div class="result-item">
-                                        <img src="assets/img/tire-pattern/OPA32.png" alt="" class="tire-img">
+                            <div class="result-title">
+                                <p>Tire Size: 195/55 r 15</p>
+                                <span>Change</span>
+                                <span>4 result for 195/55 r 15</span>
+                            </div>
+                            <div class="slide-box">
+                                <div class="result-slide">
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
+                                    </div>
+                                    <div>
+                                        <div class="result-item text-center">
+                                            <div class="tire-img" style="background-image: url(assets/img/tire-pattern/OPA32.png);"></div>
+                                            <img data-lazy="assets/img/tire-pattern/OPA32-logo.png" alt="" class="tire-logo">
+                                            <p>
+                                                TOYO DRB is an ultra high 
+                                                performance tirefor the new 
+                                                'Balanced performance' segment.
+                                            </p>
+                                            <a href="#" class="btn-custom">Veiw Details ></a>
+                                        </div>
                                     </div>
                                 </div>
+                                <a href="#" class="right-nav prev"><img src="assets/img/right-nav.jpg" alt=""></a>
+                                <a href="#" class="left-nav next"><img src="assets/img/left-nav.jpg" alt=""></a>
                             </div>
                         </div>
                     </div>
