search working and result page done

--- a/toyo/cars.html
+++ b/toyo/cars.html
@@ -73,10 +73,10 @@
                                         <label for="#carbrand">Models</label>
                                         <select name="" id="model"></select>
                                     </div>
-                                    <div class="input-group">
+                                   <!--  <div class="input-group">
                                         <label for="#carbrand">Tire size</label>
                                         <select name="" id="sizes"></select>
-                                    </div>
+                                    </div> -->
                                     <input type="submit" value="Submit" class="btn btn-custom pull-right">
                                 </form>
                             </div>
