--- a/toyo/tires.html
+++ b/toyo/tires.html
@@ -65,8 +65,7 @@
                             </div>
                             <div class="col-sm-6">
                                 <div class="size-box">
-                                    <div class="size-options">
-                                    </div>
+                                    <div class="size-options"></div>
                                 </div>
                                 <button class="sm-btn btn btn-custom pull-right btn-skip" id="skip">Skip</button>
                             </div>
