New database and un minified JS

--- a/toyo/cars-result.html
+++ b/toyo/cars-result.html
@@ -29,12 +29,12 @@
                     <div class="col-sm-12">
                         <div id="menu">
                             <ul>
-                                <li><a href="/toyo/about.html">about us</a></li>
-                                <li><a href="/toyo/tires.html">tires</a></li>
-                                <li><a href="/toyo/dealers.html">order now</a></li>
-                                <li><a href="/toyo/news.html">news</a></li>
-                                <li><a href="/toyo/contact.html">contact us</a></li>
-                                <li><a href="/toyo/sign in.html">sign in</a></li>
+                                <li><a href="about.html">about us</a></li>
+                                <li><a href="tires.html">tires</a></li>
+                                <li><a href="dealers.html">order now</a></li>
+                                <li><a href="news.html">news</a></li>
+                                <li><a href="contact.html">contact us</a></li>
+                                <li><a href="sign in.html">sign in</a></li>
                             </ul>
                         </div>
                     </div>
